Refactor [#165] 타이머 하단 친구 조회 및 타이머 정보 저장 facade